--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model TrashCollecter.Customer
+﻿@model TrashCollecter.Models.Customer
 
 @{
     ViewData["Title"] = "Index";
@@ -86,6 +86,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
+    
 </div>
