--- a/Views/Employees/Index.cshtml
+++ b/Views/Employees/Index.cshtml
@@ -15,10 +15,6 @@
     <a asp-action="Create">Create New</a>
 </p>
 
-@*<div class ="form-group">
-    <label asp-for="RequestedDayEachWeek" class ="control-label">
-    <select asp-for-"RequestedDayEachWeek" class="form-control" asp-items="ViewBag.RequestedDayEachWeek"></select>
-</div>*@
 <form asp-action="Index">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
@@ -75,8 +71,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Customers[0].StopSuspensionDate)
                 </th>
+               
                 <th>
-                    @Html.DisplayNameFor(model => model.Customers[0].IdentityUser)
+                    @Html.DisplayNameFor(model => model.Customers[0].AmountOwed)
                 </th>
                 <th></th>
             </tr>
@@ -119,14 +116,22 @@
                         @Html.DisplayFor(modelItem => item.StopSuspensionDate)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.IdentityUser.Id)
+                        @Html.DisplayFor(modelItem => item.AmountOwed)
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <form asp-controller="Customer" asp-action="AddFee" method="post">
+                            <input type="hidden" value="@item.Id" name="id"/>
+                            <button type="submit">Submit</button>
+                        </form>
+                         |
                         <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <form asp-action="Delete" method="post">
+                            
+                            <button type="submit">Submit</button>
+                        </form>
                     </td>
                 </tr>
             }
         </tbody>
     </table>
+    
