--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,15 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div></div>   
+    <div> </div>
+   
+    <h1> Welcome to Brooke's Trash Collection</h1>
+    <div></div>
+    <div></div>
+    <p>Click on register to set up an account or if you already have an account, please sign in!</p>
+    <div class="background">
+        <img src="~/lib/bootstrap/dist/css/garbagetruck.jpg"/>
+    </div>
+
 </div>
